- added Doxyfile
- added tw
  - waves, measurements
  - step control
- changed PROBElist to (*PROBE)-list
- added "math probes" (preliminary, stupid)
- allow inf as double value (hack), breaks i.* as variable name
- added ADP_CARD. not of any use.
- added sim commmand, time-as-parameter (hack?)
- added command history (incomplete)
- allow parameters as probe (HACK)
      ( fixme: expressions like {a+v(foo)} )
- repaired sweep for batchmode. 
    uses parameters and breaks interactive mode sweep (?)
- make output easier to parse for gnuplot (^* for non-data-lines)
- added options:
  - printrejected simplifies figuring out rejects.
  - some tolarance values
- powerof from gnucap-a merged
- fixed measurements to return double (not string)
   ( if strings are needed, templates should be used )