@@ -141,7 +141,6 @@ bool OPT::set_values(CS& cmd)
       || Get(cmd, "lub{ypass}",    &lubypass)
       || Get(cmd, "fbb{ypass}",	   &fbbypass)
       || Get(cmd, "tracel{oad}",   &traceload)
-      || Get(cmd, "tracett",   &tracett)
       || Get(cmd, "tracewdtt",   &tracewdtt)
       || Get(cmd, "itermin",	   &itermin)
       || Get(cmd, "adporder",	   &adporder)
